# Luni_Robot

./: .gitignore  README.md
esp32-s3/src/: AppController.cpp  AppController.hpp  CMakeLists.txt  Version.hpp  idf_component.yml  main.cpp
esp32-s3/src/assets/emotions/: happy.hpp  neutral.cpp  neutral.hpp  sad.hpp  stun.cpp  thinking.hpp
esp32-s3/src/config/: BootSubsystems.hpp  CameraConfig.hpp  DeviceProfile.cpp  MotionConfig.hpp  PinConfig.hpp  WakeWordConfig.hpp
esp32-s3/src/system/: AudioManager.cpp  AudioManager.hpp  BluetoothService.cpp  BluetoothService.hpp  CameraManager.cpp  CameraManager.hpp  DisplayManager.cpp  DisplayManager.hpp  MotionManager.cpp  MotionManager.hpp  PowerManager.cpp  PowerManager.hpp  SpiBridge.cpp  StateManager.cpp  StateManager.hpp  StateTypes.hpp  UartBridge.cpp  UartBridge.hpp
esp32-s3/src/ui/: SceneManager.cpp  SceneManager.hpp  VariantRegistry.cpp  VariantRegistry.hpp
esp32-s3/src/ui/emotions/: render_angry.cpp  render_annoyed.cpp  render_awe.cpp  render_bored.cpp  render_brave.cpp  render_calm.cpp  render_charging.cpp  render_cold.cpp  render_confused.cpp  render_cool.cpp  render_crying.cpp  render_curious.cpp  render_dead.cpp  render_determined.cpp  render_disgusted.cpp  render_dizzy.cpp  render_dreamy.cpp  render_embarrassed.cpp  render_emotions_new.cpp  render_error.cpp  render_excited.cpp  render_focused.cpp  render_grateful.cpp  render_greet.cpp  render_happy.cpp  render_hot.cpp  render_hungry.cpp  render_listening.cpp  render_loading.cpp  render_lonely.cpp  render_love.cpp  render_mischievous.cpp  render_mute.cpp  (+15 more)
(+180 files in other folders)
